{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 43,
  "lineage": "84a0b841-3702-e0ad-c197-8943300ba9d5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-11T03:28:58.238-08:00",
            "deny": [],
            "description": "Allow internal VPC traffic for Apigee and Cloud Function communication",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcppoc-477305/global/firewalls/private-backend-vpc-allow-internal",
            "log_config": [],
            "name": "private-backend-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/gcppoc-477305/global/networks/private-backend-vpc",
            "params": [],
            "priority": 1000,
            "project": "gcppoc-477305",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcppoc-477305/global/firewalls/private-backend-vpc-allow-internal",
            "source_ranges": [
              "10.0.0.0/24",
              "10.8.0.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "apigee",
              "cloud-function"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.required_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_vpn_to_apigee",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-11T03:28:58.449-08:00",
            "deny": [],
            "description": "Allow VPN traffic to Apigee (internal access only)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcppoc-477305/global/firewalls/private-backend-vpc-allow-vpn-to-apigee",
            "log_config": [],
            "name": "private-backend-vpc-allow-vpn-to-apigee",
            "network": "https://www.googleapis.com/compute/v1/projects/gcppoc-477305/global/networks/private-backend-vpc",
            "params": [],
            "priority": 1000,
            "project": "gcppoc-477305",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcppoc-477305/global/firewalls/private-backend-vpc-allow-vpn-to-apigee",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "apigee"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.required_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_external_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2025-11-11T03:28:58.113-08:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "Explicitly deny all external internet traffic to Apigee and Cloud Function",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcppoc-477305/global/firewalls/private-backend-vpc-deny-external",
            "log_config": [],
            "name": "private-backend-vpc-deny-external",
            "network": "https://www.googleapis.com/compute/v1/projects/gcppoc-477305/global/networks/private-backend-vpc",
            "params": [],
            "priority": 65534,
            "project": "gcppoc-477305",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcppoc-477305/global/firewalls/private-backend-vpc-deny-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "apigee",
              "cloud-function"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.required_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gcppoc-477305/global/networks/private-backend-vpc",
            "mtu": 0,
            "name": "private-backend-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5916328371129590560",
            "numeric_id": "5916328371129590560",
            "project": "gcppoc-477305",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcppoc-477305/global/networks/private-backend-vpc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.required_apis"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-11T03:29:05.495-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/gcppoc-477305/regions/asia-south1/subnetworks/private-backend-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "private-backend-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gcppoc-477305/global/networks/private-backend-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcppoc-477305",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcppoc-477305/regions/asia-south1/subnetworks/private-backend-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2714226958274568430
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.required_apis"
          ]
        }
      ]
    }
  ]
}